--- a/ireport/Relatorios/jrxml/agenet_agendamentos.jrxml
+++ b/ireport/Relatorios/jrxml/agenet_agendamentos.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="agenet_agendamentos" language="groovy" pageWidth="842" pageHeight="496" orientation="Landscape" columnWidth="842" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" whenResourceMissingType="Empty" uuid="b0b8a82c-538e-4c5e-a2d2-48ac4a892d8a">
 	<property name="ireport.zoom" value="5.1874849202000055"/>
-	<property name="ireport.x" value="173"/>
-	<property name="ireport.y" value="240"/>
+	<property name="ireport.x" value="2418"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="PR_NMRESCOP" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -227,7 +227,7 @@
 				<textElement>
 					<font fontName="Courier New" size="7"/>
 				</textElement>
-				<text><![CDATA[CONTA DESTINO/LINHA DIGITAVEL]]></text>
+				<text><![CDATA[Dados da Transacao]]></text>
 			</staticText>
 		</band>
 	</pageHeader>
