Atualização branch PROD após liberação 27/09/2016
git-tfs-id: [http://alm.cecred.coop.br:8080/tfs/DefaultCollection]$/FONTES/PROD;C7352

--- a/ireport/Relatorios/jrxml/declaracao_pep.jrxml
+++ b/ireport/Relatorios/jrxml/declaracao_pep.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="declaracao_ppe" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" uuid="3507f05f-852a-4801-ace7-f9927a1d69bc">
 	<property name="ireport.zoom" value="1.3310000000000006"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="606"/>
+	<property name="ireport.y" value="370"/>
 	<queryString language="xPath">
 		<![CDATA[/declaracao]]>
 	</queryString>
@@ -74,8 +74,8 @@
 					<font fontName="Courier New" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["   Declaro que eu, " + $F{nmextttl} + ", portador do CPF " + $F{nrcpfcgc} +
-", titular da conta " + $F{nrdconta} + ", não sou uma pessoa exposta " +
-"politicamente, nos termos dos normativos em vigor.\n\n\n" +
+", não sou uma pessoa exposta politicamente, nos termos dos " +
+"normativos em vigor.\n\n\n" +
 
 "   Declaro, ainda, que comunicarei a Cooperativa qualquer alteração da " +
 "presente condição."]]></textFieldExpression>
@@ -89,7 +89,7 @@
 					<font fontName="Courier New" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["    Declaro que eu, " + $F{nmextttl} + ", portador do CPF " + $F{nrcpfcgc} +
-", titular da conta " + $F{nrdconta} + ", sou uma pessoa exposta " +
+", sou uma pessoa exposta " +
 "politicamente, nos termos dos normativos em vigor.\n\n\n" +
 
 "   Declaro, ainda, que comunicarei a Cooperativa qualquer alteração da " +
@@ -110,7 +110,7 @@
 					<font fontName="Courier New" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["    Declaro que eu, " + $F{nmextttl} + ", portador " +
-"do CPF " + $F{nrcpfcgc} + ", titular da conta " + $F{nrdconta} + ", possuo " +
+"do CPF " + $F{nrcpfcgc} + ", possuo " +
 "relacionamento com uma pessoa exposta politicamente, nos termos dos " +
 "normativos em vigor.\n\n\n" +
 
