--- a/ireport/Relatorios/jrxml/crrl519_bordero_restri_coordenador.jrxml
+++ b/ireport/Relatorios/jrxml/crrl519_bordero_restri_coordenador.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.0.final using JasperReports Library version 6.3.0  -->
-<!-- 2016-09-12T09:31:45 -->
+<!-- 2016-10-07T15:06:09 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="crrl519_bordero_cheques" language="groovy" pageWidth="595" pageHeight="672" whenNoDataType="AllSectionsNoDetail" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" whenResourceMissingType="Empty" uuid="b0b8a82c-538e-4c5e-a2d2-48ac4a892d8a">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
@@ -31,8 +31,9 @@
 	<columnHeader>
 		<band height="8">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+			<printWhenExpression><![CDATA[$F{dsopecoo}.isEmpty() == false]]></printWhenExpression>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="0" y="0" width="190" height="8" uuid="24b90cf8-e8eb-4491-b0d8-1d00e52e0b54">
+				<reportElement positionType="Float" x="0" y="0" width="190" height="8" isRemoveLineWhenBlank="true" uuid="24b90cf8-e8eb-4491-b0d8-1d00e52e0b54">
 					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
@@ -44,7 +45,7 @@
 				<textFieldExpression><![CDATA["RESTRIÇÃO(ÕES) APROVADA(AS) PELO COORDENADOR: "]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="195" y="0" width="380" height="8" uuid="85502094-badb-4c77-a40b-8fe72c50c8e4">
+				<reportElement positionType="Float" x="195" y="0" width="380" height="8" isRemoveLineWhenBlank="true" uuid="85502094-badb-4c77-a40b-8fe72c50c8e4">
 					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
@@ -60,7 +61,7 @@
 		<band height="8">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="0" y="0" width="380" height="8" uuid="abe7d43e-076e-4020-9c43-453eaacbb84e">
+				<reportElement positionType="Float" x="0" y="0" width="380" height="8" isRemoveLineWhenBlank="true" uuid="abe7d43e-076e-4020-9c43-453eaacbb84e">
 					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
