--- a/ireport/Relatorios/iReport/jrxml/crrl673.jrxml
+++ b/ireport/Relatorios/iReport/jrxml/crrl673.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="crrl661" language="groovy" pageWidth="595" pageHeight="670" whenNoDataType="AllSectionsNoDetail" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isFloatColumnFooter="true" whenResourceMissingType="Empty" uuid="b0b8a82c-538e-4c5e-a2d2-48ac4a892d8a">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="crrl673" language="groovy" pageWidth="595" pageHeight="670" whenNoDataType="AllSectionsNoDetail" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isFloatColumnFooter="true" whenResourceMissingType="Empty" uuid="b0b8a82c-538e-4c5e-a2d2-48ac4a892d8a">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -14,7 +14,7 @@
 	<parameter name="PR_NMDESTIN" class="java.lang.String"/>
 	<parameter name="PR_SQSOLICI" class="java.lang.String"/>
 	<queryString language="xPath">
-		<![CDATA[/root/consorcios/consorcio]]>
+		<![CDATA[/root/convenios/convenio]]>
 	</queryString>
 	<field name="cdrefere" class="java.lang.String">
 		<fieldDescription><![CDATA[@cdrefere]]></fieldDescription>
@@ -55,6 +55,12 @@
 	<field name="vlpareje" class="java.lang.String">
 		<fieldDescription><![CDATA[/root/total/@vlpareje]]></fieldDescription>
 	</field>
+	<field name="cdagenci" class="java.lang.String">
+		<fieldDescription><![CDATA[@cdagenci]]></fieldDescription>
+	</field>
+	<field name="nmempres" class="java.lang.String">
+		<fieldDescription><![CDATA[@nmempres]]></fieldDescription>
+	</field>
 	<pageHeader>
 		<band height="8">
 			<subreport>
@@ -94,7 +100,7 @@
 	<columnHeader>
 		<band height="40">
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="385" y="24" width="210" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="438" y="24" width="157" height="8"/>
 				<textElement>
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
@@ -109,204 +115,246 @@
 				<textFieldExpression><![CDATA["ARQUIVO: "+$F{nmarquiv}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="2" y="24" width="48" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="19" y="24" width="48" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<text><![CDATA[CONTA/DV]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="58" y="24" width="60" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="70" y="24" width="46" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
-				<text><![CDATA[CTA.CONSORCIO]]></text>
+				<text><![CDATA[CT.SICREDI]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="c7650d22-5e72-4a72-b52b-f24c8ab329ff" x="328" y="24" width="47" height="8"/>
+				<reportElement uuid="c7650d22-5e72-4a72-b52b-f24c8ab329ff" x="387" y="24" width="47" height="8"/>
 				<textElement>
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<text><![CDATA[DATA.DEB. ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="261" y="24" width="56" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="330" y="24" width="52" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<text><![CDATA[VALOR]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="385" y="32" width="210" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="438" y="32" width="157" height="8"/>
 				<textElement>
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
-				<text><![CDATA[-----------------------------------------------]]></text>
+				<text><![CDATA[------------------------------------]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="2" y="32" width="48" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="19" y="32" width="48" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<text><![CDATA[----------]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="58" y="32" width="60" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="70" y="32" width="46" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
-				<text><![CDATA[--------------]]></text>
+				<text><![CDATA[----------]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="328" y="32" width="47" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="387" y="32" width="47" height="8"/>
 				<textElement>
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<text><![CDATA[----------]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="261" y="32" width="56" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="330" y="32" width="52" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<text><![CDATA[--------------]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="130" y="32" width="115" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="220" y="32" width="112" height="8"/>
 				<textElement>
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
-				<text><![CDATA[------------------------]]></text>
+				<text><![CDATA[---------------------------------]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="130" y="24" width="115" height="8"/>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="220" y="24" width="112" height="8"/>
 				<textElement>
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
-				<text><![CDATA[IDENTIFICACAO CONSORCIO ]]></text>
+				<text><![CDATA[IDENTIFICACAO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="0" y="32" width="16" height="8"/>
+				<textElement textAlignment="Right">
+					<font fontName="Courier New" size="7" isUnderline="false"/>
+				</textElement>
+				<text><![CDATA[---]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="0" y="24" width="16" height="8"/>
+				<textElement textAlignment="Right">
+					<font fontName="Courier New" size="7" isUnderline="false"/>
+				</textElement>
+				<text><![CDATA[PA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="122" y="24" width="98" height="8"/>
+				<textElement>
+					<font fontName="Courier New" size="7" isUnderline="false"/>
+				</textElement>
+				<text><![CDATA[CONVENIO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="f5dd01e1-d401-400d-a3a6-8e39bc69df68" x="122" y="32" width="98" height="8"/>
+				<textElement>
+					<font fontName="Courier New" size="7" isUnderline="false"/>
+				</textElement>
+				<text><![CDATA[-----------------------------]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="8" splitType="Stretch">
 			<textField>
-				<reportElement uuid="af46cca5-27f6-493a-9b8c-56de1ce2521b" x="328" y="0" width="47" height="8"/>
+				<reportElement uuid="af46cca5-27f6-493a-9b8c-56de1ce2521b" x="387" y="0" width="47" height="8"/>
 				<textElement markup="none">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{dtdebito}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="585dbc98-e415-4b3d-8584-ceb04f922465" x="130" y="0" width="115" height="8"/>
+				<reportElement uuid="585dbc98-e415-4b3d-8584-ceb04f922465" x="220" y="0" width="112" height="8"/>
 				<textElement markup="none">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cdrefere}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="e65cff91-9d0e-42f6-92d5-da24c36fb9bc" x="261" y="0" width="56" height="8"/>
+				<reportElement uuid="e65cff91-9d0e-42f6-92d5-da24c36fb9bc" x="330" y="0" width="52" height="8"/>
 				<textElement textAlignment="Right" markup="none">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{vlparcns}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="5b51e121-1f68-42ae-8adb-d7670a759c5f" x="58" y="0" width="60" height="8"/>
+				<reportElement uuid="5b51e121-1f68-42ae-8adb-d7670a759c5f" x="70" y="0" width="46" height="8"/>
 				<textElement textAlignment="Right" markup="none">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nrctacns}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="8a5b2578-40bb-49c8-82e4-1e5ff722d110" x="385" y="0" width="210" height="8"/>
+				<reportElement uuid="8a5b2578-40bb-49c8-82e4-1e5ff722d110" x="438" y="0" width="157" height="8"/>
 				<textElement markup="none">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{dscritic}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="15090416-d520-4100-a92c-ce415638d0dd" x="2" y="0" width="48" height="8"/>
+				<reportElement uuid="15090416-d520-4100-a92c-ce415638d0dd" x="19" y="0" width="48" height="8"/>
 				<textElement textAlignment="Right" markup="none">
 					<font fontName="Courier New" size="7" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nrdconta}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="15090416-d520-4100-a92c-ce415638d0dd" x="0" y="0" width="16" height="8"/>
+				<textElement textAlignment="Right" markup="none">
+					<font fontName="Courier New" size="7" isUnderline="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{cdagenci}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="585dbc98-e415-4b3d-8584-ceb04f922465" x="122" y="0" width="98" height="8"/>
+				<textElement markup="none">
+					<font fontName="Courier New" size="7" isUnderline="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{nmempres}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<summary>
 		<band height="40">
 			<staticText>
-				<reportElement uuid="f7846b86-024f-41ee-bc66-ab788f8057bf" x="79" y="24" width="73" height="8"/>
+				<reportElement uuid="f7846b86-024f-41ee-bc66-ab788f8057bf" x="81" y="24" width="73" height="8"/>
 				<textElement textAlignment="Right" markup="none">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<text><![CDATA[QTD. DEBITOS:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="058f6262-ddba-4f36-90df-946ea4bcebbf" x="243" y="32" width="70" height="8"/>
+				<reportElement uuid="058f6262-ddba-4f36-90df-946ea4bcebbf" x="245" y="32" width="70" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{vlpainte}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="6b990f5e-afb9-4189-aae6-fbc91f32bca4" x="156" y="16" width="59" height="8"/>
+				<reportElement uuid="6b990f5e-afb9-4189-aae6-fbc91f32bca4" x="162" y="16" width="59" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<text><![CDATA[RECEBIDOS]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="79fa9a2b-b698-41df-bca5-0c9480ebb22b" x="156" y="24" width="59" height="8"/>
+				<reportElement uuid="79fa9a2b-b698-41df-bca5-0c9480ebb22b" x="162" y="24" width="59" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{qtdreceb}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="f7846b86-024f-41ee-bc66-ab788f8057bf" x="79" y="32" width="73" height="8"/>
+				<reportElement uuid="f7846b86-024f-41ee-bc66-ab788f8057bf" x="81" y="32" width="73" height="8"/>
 				<textElement textAlignment="Right" markup="none">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<text><![CDATA[TOTAL DEBITOS:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="058f6262-ddba-4f36-90df-946ea4bcebbf" x="243" y="24" width="70" height="8"/>
+				<reportElement uuid="058f6262-ddba-4f36-90df-946ea4bcebbf" x="245" y="24" width="70" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{qtdinteg}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="79fa9a2b-b698-41df-bca5-0c9480ebb22b" x="156" y="32" width="59" height="8"/>
+				<reportElement uuid="79fa9a2b-b698-41df-bca5-0c9480ebb22b" x="162" y="32" width="59" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{vlparceb}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="6b990f5e-afb9-4189-aae6-fbc91f32bca4" x="243" y="16" width="70" height="8"/>
+				<reportElement uuid="6b990f5e-afb9-4189-aae6-fbc91f32bca4" x="245" y="16" width="70" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<text><![CDATA[INTEGRADOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="6b990f5e-afb9-4189-aae6-fbc91f32bca4" x="330" y="16" width="70" height="8"/>
+				<reportElement uuid="6b990f5e-afb9-4189-aae6-fbc91f32bca4" x="332" y="16" width="70" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<text><![CDATA[REJEITADOS]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="058f6262-ddba-4f36-90df-946ea4bcebbf" x="330" y="32" width="70" height="8"/>
+				<reportElement uuid="058f6262-ddba-4f36-90df-946ea4bcebbf" x="332" y="32" width="70" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{vlpareje}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="058f6262-ddba-4f36-90df-946ea4bcebbf" x="330" y="24" width="70" height="8"/>
+				<reportElement uuid="058f6262-ddba-4f36-90df-946ea4bcebbf" x="332" y="24" width="70" height="8"/>
 				<textElement textAlignment="Right">
 					<font fontName="Courier New" size="7"/>
 				</textElement>
